# autoshift

./: .dockerignore  .gitignore  .rgignore  CMakeLists.txt  Dockerfile  Makefile  Pipfile  Readme.md  auto.py  common.py  dockerfile  env.default  migrations.py  pyproject.toml  query.py  requirements.txt  shift.py  shiftcodes.json  short_licence
.github/workflows/: docker-publish.yml  publish.yml
autoshift/: auto.py  collector.py  common.py  migrations.py  models.py  shift.py  storage.py
cmake/: CheckOS.cmake  FindBoostExtern.cmake  FindQt5Extern.cmake  FindQuiet.cmake  GetSystemIncludes.cmake  ListToString.cmake  SetDefault.cmake
extern_libs/QtWaitingSpinner/: CMakeLists.txt
include/: controlwindow.hpp  fsettings.hpp  key.hpp  logger.hpp  macros.hpp  parser.hpp  parser_orcicorn.hpp  parser_orcz.hpp  query.hpp  request.hpp  shift.hpp
include/misc/: fsettings.hpp  logger.hpp  macros.hpp  xmlreader.hpp
include/ui/: controlwindow.ui  loginwindow.ui
include/widgets/: qansitextedit.hpp
src/: CMakeLists.txt  auto.py  common.py  controlwindow.cpp  controlwindow.hpp  controlwindow.ui  key.cpp  main.cpp  migrations.py.no  models.py  parser_orcicorn.cpp  parser_orcz.cpp  query.cpp  query.py  request.cpp  request.hpp  shift.cpp  shift.hpp  shift.py
src/widgets/: qansitextedit.cpp
