[tool.poetry]
name = "autoshift"
version = "0.1.0"
description = "AutoSHIFt: Automatically redeem Gearbox SHIFt Codes"
authors = ["Fabian Schweinfurth <github@derfabbi.de>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.9.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.0"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
